<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/company_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/view_jobs"
            android:title="@string/post_jobs" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/application"
            android:title="@string/view_student_applications" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_update_black_24dp"
            android:title="@string/update_details" />

        <item
            android:id="@+id/nav_password"
            android:icon="@mipmap/password"
            android:title="@string/change_password"/>
    </group>

</menu>
