<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/student"
            android:title="@string/manage_student" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/company_building_icon"
            android:title="@string/manage_company" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_update_black_24dp"
            android:title="@string/update_details" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/password"
            android:title="@string/change_password" />
    </group>


</menu>
